tests/conformance/invalid/01-missing-header/input.sgl
* fact: this document has no header
! warn: it is missing the %% line
